@@ -8,11 +8,12 @@ DysectStatus DysectAPI::onProcStart() {
                            //Domain::group("4,5"),
                            Acts(Act::stackTrace(),
                                 Act::trace("@desc(rank): Location is @function():@location()"),
-                                Act::trace("Function is '@function()'"),
+                                //Act::trace("Function is '@function()'"),
                                 Act::trace("Location is '@location()'"),
-                                Act::trace("Rank is '@desc(rank)'"),
-                                Act::trace("Min rank is '@min(rank)'"),
-                                Act::trace("Max rank is '@max(rank)'"),
+                                Act::trace("Val is '@desc(val)'"),
+                                Act::trace("ip is '@desc(ip)'"),
+                                Act::trace("Min val2 is '@min(val2)'"),
+                                Act::trace("Max val3 is '@max(val3)'"),
                                 Act::stat()));
   Probe* p1b   = new Probe(Time::within(0),
                            Domain::group("4,5", 1000),
