@@ -48,7 +48,6 @@ enum agg_type {
 #include "DysectAPI/Aggregates/Data.h"
 #include "DysectAPI/Aggregates/AggregateFunction.h"
 #include "DysectAPI/Aggregates/CmpAgg.h"
-//#include "DysectAPI/Aggregates/Min.h"
 #include "DysectAPI/Aggregates/StrAgg.h"
 #include "DysectAPI/Aggregates/RankListAgg.h"
 #include "DysectAPI/Aggregates/Location.h"
